@@ -5,8 +5,8 @@ import compassoulspring2024pb.challenge1.eventservice.model.Event;
 import compassoulspring2024pb.challenge1.eventservice.model.enums.StatesEnum;
 import compassoulspring2024pb.challenge1.eventservice.repository.EventRepository;
 import compassoulspring2024pb.challenge1.eventservice.service.implementation.EventServiceImplementation;
-import compassoulspring2024pb.challenge1.eventservice.web.dto.CreateEventDTO;
-import compassoulspring2024pb.challenge1.eventservice.web.dto.UpdateEventDTO;
+import compassoulspring2024pb.challenge1.eventservice.web.api.v1.dto.CreateEventRequestDTO;
+import compassoulspring2024pb.challenge1.eventservice.web.api.v1.dto.UpdateEventRequestDTO;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -14,6 +14,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import java.util.*;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -33,7 +36,7 @@ public class EventServiceUnitTests {
 
     @Test
     public void create_withValidEvent_shouldReturnEvent() {
-        CreateEventDTO event = new CreateEventDTO("event1",
+        CreateEventRequestDTO event = new CreateEventRequestDTO("event1",
                 "cep1",
                 "address1",
                 "city1",
@@ -54,41 +57,41 @@ public class EventServiceUnitTests {
 
     @Test
     public void update_withValidData_shouldReturnEvent() {
-        UpdateEventDTO updateEventDTO = new UpdateEventDTO("event1",
+        UpdateEventRequestDTO updateEventInternalDTO = new UpdateEventRequestDTO("event1",
                 "cep1",
                 "address1",
                 "city1",
                 "district1",
                 StatesEnum.SP);
-        Event event = updateEventDTO.toModel();
+        Event event = updateEventInternalDTO.toModel();
 
         when(eventRepository.findActiveById(event.getId())).thenReturn(Optional.of(event));
         when(eventRepository.save(any(Event.class))).thenReturn(event);
 
-        Event result = eventService.update(updateEventDTO, event.getId());
+        Event result = eventService.update(updateEventInternalDTO, event.getId());
 
         Assertions.assertNotNull(result);
-        Assertions.assertEquals(updateEventDTO.getName(), result.getName());
-        Assertions.assertEquals(updateEventDTO.getCep(), result.getCep());
-        Assertions.assertEquals(updateEventDTO.getAddress(), result.getAddress());
-        Assertions.assertEquals(updateEventDTO.getCity(), result.getCity());
-        Assertions.assertEquals(updateEventDTO.getDistrict(), result.getDistrict());
-        Assertions.assertEquals(updateEventDTO.getState(), result.getState());
+        Assertions.assertEquals(updateEventInternalDTO.getName(), result.getName());
+        Assertions.assertEquals(updateEventInternalDTO.getCep(), result.getCep());
+        Assertions.assertEquals(updateEventInternalDTO.getAddress(), result.getAddress());
+        Assertions.assertEquals(updateEventInternalDTO.getCity(), result.getCity());
+        Assertions.assertEquals(updateEventInternalDTO.getDistrict(), result.getDistrict());
+        Assertions.assertEquals(updateEventInternalDTO.getState(), result.getState());
     }
 
     @Test
     public void update_withInvalidId_shouldThrowEntityNotFoundException() {
-        UpdateEventDTO updateEventDTO = new UpdateEventDTO("event1",
+        UpdateEventRequestDTO updateEventInternalDTO = new UpdateEventRequestDTO("event1",
                 "cep1",
                 "address1",
                 "city1",
                 "district1",
                 StatesEnum.SP);
-        Event event = updateEventDTO.toModel();
+        Event event = updateEventInternalDTO.toModel();
 
         when(eventRepository.findActiveById(event.getId())).thenReturn(Optional.empty());
 
-        Assertions.assertThrows(EntityNotFoundException.class, () -> eventService.update(updateEventDTO, event.getId()));
+        Assertions.assertThrows(EntityNotFoundException.class, () -> eventService.update(updateEventInternalDTO, event.getId()));
     }
 
     @Test
@@ -124,9 +127,9 @@ public class EventServiceUnitTests {
 
     @Test
     public void findAll_withNoEvents_shouldReturnEmptyList() {
-        when(eventRepository.findAllActive()).thenReturn(new ArrayList<>());
+        when(eventRepository.findAllActive(any(Pageable.class))).thenReturn(Page.empty());
 
-        Assertions.assertEquals(0, eventService.findAll().size());
+        Assertions.assertEquals(0, eventService.findAll(Pageable.ofSize(10)).getContent().size());
     }
 
     @Test
@@ -158,15 +161,17 @@ public class EventServiceUnitTests {
             StatesEnum.AC
         );
 
-        List<Event> expectedEvents = Arrays.asList(event1, event2, event3);
-        when(eventRepository.findAllActive()).thenReturn(expectedEvents);
+        List<Event> mockedListToReturn = List.of(event1,event2,event3);
+        Page<Event> mockedPageToReturn = new PageImpl<>(mockedListToReturn);
 
-        List<Event> result = eventService.findAll();
+        when(eventRepository.findAllActive(any(Pageable.class))).thenReturn(mockedPageToReturn);
 
-        Assertions.assertEquals(expectedEvents.size(), result.size());
+        Page<Event> result = eventService.findAll(Pageable.ofSize(10));
+
+        Assertions.assertEquals(mockedListToReturn.size(), result.getContent().size());
 
         result.forEach(event -> {
-            Assertions.assertTrue(expectedEvents.contains(event));
+            Assertions.assertTrue(mockedPageToReturn.getContent().contains(event));
             Assertions.assertNotNull(event.getId());
             Assertions.assertNotNull(event.getName());
             Assertions.assertNotNull(event.getCep());
